force-app/main/default/objects/CowinVaccine__c/CowinVaccine__c.object-meta.xml
<CustomObject>
    <label>Cowin Vaccine</label>
    <nameField>
        <displayFormat>CO-{0000000000}</displayFormat>
        <label>Cowin Vaccine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cowin Vaccines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>