force-app/main/default/objects/CowinVaccine__c/fields/District_Id__c.field-meta.xml
<CustomField>
    <fullName>District_Id__c</fullName>
    <label>District Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>