force-app/main/default/objects/CowinVaccine__c/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <label>Dummy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>One</label>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>