force-app/main/default/objects/CowinVaccine__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Andaman and Nicobar Islands</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Andhra Pradesh</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Arunachal Pradesh</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Assam</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Bihar</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Chandigarh</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Chhattisgarh</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Dadra and Nagar Haveli</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Daman and Diu</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Delhi</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Goa</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Gujarat</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Haryana</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Himachal Pradesh</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Jammu and Kashmir</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Jharkhand</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Karnataka</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Kerala</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Ladakh</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Lakshadweep</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Madhya Pradesh</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Maharashtra</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Manipur</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Meghalaya</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Mizoram</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Nagaland</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Odisha</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Puducherry</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Punjab</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Rajasthan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>